--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
-
-SITE_NAME_HEADER=Digital Garden
+THEME=https://raw.githubusercontent.com/insanum/obsidian_nord/HEAD/theme.css
+BASE_THEME=light
+SITE_NAME_HEADER=oskoya
 SITE_BASE_URL=mellow-rugelach-c807f6.netlify.app
 SHOW_CREATED_TIMESTAMP=false
-TIMESTAMP_FORMAT=MMM dd, yyyy h:mm a
+TIMESTAMP_FORMAT=MMM,dd,yyyy h:mm a
 SHOW_UPDATED_TIMESTAMP=false
 NOTE_ICON_DEFAULT=
 NOTE_ICON_TITLE=false
@@ -11,7 +12,7 @@ NOTE_ICON_INTERNAL_LINKS=false
 NOTE_ICON_BACK_LINKS=false
 STYLE_SETTINGS_CSS=""
 dgHomeLink=true
-dgPassFrontmatter=false
+dgPassFrontmatter=true
 dgShowBacklinks=true
 dgShowLocalGraph=true
 dgShowInlineTitle=true
