--- a/.env
+++ b/.env
@@ -15,8 +15,8 @@ dgPassFrontmatter=false
 dgShowBacklinks=true
 dgShowLocalGraph=true
 dgShowInlineTitle=false
-dgShowFileTree=true
+dgShowFileTree=false
 dgEnableSearch=false
-dgShowToc=true
+dgShowToc=false
 dgLinkPreview=false
 dgShowTags=false
