--- a/.env
+++ b/.env
@@ -10,10 +10,10 @@ NOTE_ICON_FILETREE=false
 NOTE_ICON_INTERNAL_LINKS=false
 NOTE_ICON_BACK_LINKS=false
 STYLE_SETTINGS_CSS=""
-dgHomeLink=true
+dgHomeLink=false
 dgPassFrontmatter=false
 dgShowBacklinks=false
-dgShowLocalGraph=true
+dgShowLocalGraph=false
 dgShowInlineTitle=false
 dgShowFileTree=false
 dgEnableSearch=false
